fix: scrollbar

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -23,6 +23,10 @@ html, body {
   overflow-x: hidden;
 }
 
+html }
+  overflow-y: scroll;
+}
+
 .m-plus-1p-regular {
   font-family: "M PLUS 1p", sans-serif;
   font-weight: 900;
